cleared the layout issue -1

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 body {
     font-family: 'Gideon Roman', serif;
+    overflow-x: hidden;
 
 }
 
@@ -39,8 +40,8 @@ body{
 }
 
 .home img{
-    height: 400px;
-    width: 400px;
+    height: 22rem;
+    width: 22rem;
     border-radius: 100%;
     position: sticky;
    
@@ -48,61 +49,59 @@ body{
 
 }
 .home{
-    padding: 15% 0 0 15%;
+    
     width: 100%;
     height: 200vh;
     display: flex;
     align-items: center;
     justify-content:center;
-    gap: 30px;
+   
     text-align: center;
 }
 
 .moto{
-    font-size: 25px;
+    font-size: 2rem;
+    
 }
 
 
 .home h{
-    font-size: 150px;
+    font-size: 7rem;
+    margin: auto;
+    padding-top: 2rem;
+    padding-left: 2rem;
     
 }
 .main{
-    padding-right: 20%;
+    padding-right: 0;
 }
 
 .services-list{
-    padding-top: 30%;
-    padding-left: 0;
+    padding: 15% 12% 0 12%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+
 
 }
-.container{
-    display:flex;
 
-    align-items: center;
-    justify-content: center;
-}
 
 .subcontainer{
-  border: auto;
-   background-position: center;
-   background-size: cover;
+  
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
-   flex-direction: row;
+  
+ 
+   
    
 
 }
 .first-img img{
-    height: 250px;
-    width: 250px;
+    height: 15rem;
+    width: 15rem;
     border-radius: 5% ;
-    padding: 7px;
+    
+    
 }
 
 .first-slice{
@@ -178,6 +177,12 @@ body{
     border-radius: 17%;
     padding: 0 20% 0 20%;
     
+}
+
+.titlecontainer{
+    display:flex;
+    margin:0;
+    align-items: center;
 }
 
 
